<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.qualitysolutions.tecniamsa.J_Combustible">

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue2"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/dateNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/blue1"
            android:text="@string/date_example"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextClock
            android:id="@+id/clock1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/dateNow"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/dateNow"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btn_Logout"
            android:layout_width="80dp"
            android:layout_height="43dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logout_conten_description"
            android:onClick="logOut"
            android:src="@mipmap/btn_logout" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/txtTicket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/hntTicket"
                android:inputType="numberDecimal"
                android:textSize="20sp" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/txtGallons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/hntGallons"
                android:inputType="numberDecimal"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtProvider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/hntProvaider"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/hntCost"
                android:inputType="numberSigned"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/lblGasKind"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp" />

            <RadioGroup
                android:id="@+id/radioGroupGasKind"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp" >

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/btnDiesel"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/btnCorriente"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/btnExtra"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/btnGas"
                    android:textSize="20sp" />
            </RadioGroup>


            <Button
                android:id="@+id/button1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="save"
                android:text="@string/btnSaveGasTicket"
                android:background="@color/blue2"
                android:textColor="@color/white"
                android:padding="14dp"
                />

            </LinearLayout>

        </ScrollView>

</RelativeLayout>
