<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.qualitysolutions.tecniamsa.I_inoperatividad">

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue2"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/dateNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/blue1"
            android:text="@string/date_example"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextClock
            android:id="@+id/clock1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/dateNow"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/dateNow"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btn_Logout"
            android:layout_width="80dp"
            android:layout_height="43dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logout_conten_description"
            android:onClick="logOut"
            android:src="@mipmap/btn_logout" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RelativeLayout1">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lblInoperativityReason"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <RadioButton
                android:id="@+id/btnAccident"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rdoAccident"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/btnVarado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/btnStrandedVehicle"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/btnTrafico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/btnTraffic"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/btnDanoVehiculo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/btnDamageAnotherCar"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/btnDanoInmueble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/btnDamageAProperty"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/btnOrdenPublico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/btnPublicOrder"
                android:textSize="25sp" />

        </RadioGroup>

        <EditText
            android:id="@+id/txtDetail"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/hntTxtInoperativityDescription"
            android:inputType="text"
            android:maxLines="2"
            android:textSize="25sp" >

        </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            >

            <ImageButton
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@mipmap/btn_iniciar"
                android:onClick="start" />

            <ImageButton
                android:id="@+id/btnFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@mipmap/btn_terminar_activo"
                android:enabled="false"
                android:onClick="finish"/>

        </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
