<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/a_background_portrait"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}"
    android:id="@+id/papa">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:background="@mipmap/logo_grupo_sala"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtUser"
            android:inputType="text"
            android:textSize="25sp"
            android:layout_gravity="center">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/txtPassword"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="25sp" />


        <Button
            android:id="@+id/button1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/blue1"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="logIn"
            android:padding="10dp"
            android:text="@string/btnLogin"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white"/>
    </LinearLayout>

</RelativeLayout>

