<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.qualitysolutions.tecniamsa.A_LoginSecond">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_above="@+id/bottomButtons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/titleSelectTruck"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left">

            <TextView
                android:id="@+id/numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="# interno: "
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/numeroInterno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/numeroInternoExample"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="left">

            <TextView
                android:id="@+id/stringplaca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="placa: "
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/placa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/placaExample"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25sp"/>

        </LinearLayout>



        <ListView
            android:id="@+id/ListTruck"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal">
        </ListView>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/atras"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn6"
            android:text="@string/btnAtras"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="25sp"
            android:padding="10dp"
            android:onClick="atras"
            android:layout_weight="1"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/empezar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue1"
            android:text="@string/SendLogin2"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="25sp"
            android:padding="10dp"
            android:onClick="startSession"
            android:layout_weight="1"
            android:layout_margin="10dp"/>


        </LinearLayout>



</RelativeLayout>
