<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.qualitysolutions.tecniamsa.K_Peaje">

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue2"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/dateNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@color/blue1"
            android:text="@string/date_example"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextClock
            android:id="@+id/clock1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/dateNow"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/dateNow"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btn_Logout"
            android:layout_width="80dp"
            android:layout_height="43dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logout_conten_description"
            android:onClick="logOut"
            android:src="@mipmap/btn_logout" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/RelativeLayout1"
        >

        <EditText
            android:id="@+id/etTicket"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:ems="10"
            android:hint="@string/numberToll"
            android:inputType="number"
            android:padding="10dp"
            android:textSize="20sp" >
        </EditText>

        <Spinner
            android:id="@+id/casetas"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:padding="10dp"/>



        <Button
            android:id="@+id/btnPayToll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/blue1"
            android:ems="13"
            android:gravity="center_vertical|center_horizontal|center"
            android:padding="10dp"
            android:text="Pagar peaje"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="25sp"
            android:onClick="pay_toll"/>

        </LinearLayout>

</RelativeLayout>
